# mcp-data-analyst-agent

./: .dockerignore  .env.example  .gitignore  Dockerfile  Makefile  README.md  alembic.ini  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
alembic/: env.py
alembic/versions/: 0001_initial.py
app/: main.py
app/agent/: openai_agent.py
app/api/v1/: routes.py
app/core/: config.py  errors.py  logging.py
app/db/: session.py
app/models/: __init__.py  business_tables.py  operational.py
app/repositories/: question_runs.py
app/schemas/: ask.py  common.py
app/services/: data_loader.py  mcp_client.py
app/utils/: request_context.py  security.py
data/: churn.csv  customers.csv  products.csv  regions.csv  sales.csv
docs/: architecture.md
mcp_servers/analytics_server/: analytics.py  server.py
mcp_servers/chart_server/: charts.py  server.py
mcp_servers/sql_server/: safety.py  server.py
scripts/: generate_data.py  seed_data.py
tests/integration/: test_api.py
tests/unit/: test_analytics.py  test_charts.py  test_sql_safety.py
