[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mcp-data-analyst-agent"
version = "0.1.0"
description = "MCP-powered AI data analyst agent using OpenAI Responses API"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "fastapi>=0.115.0",
  "uvicorn[standard]>=0.30.0",
  "sqlalchemy>=2.0.32",
  "psycopg[binary]>=3.2.0",
  "alembic>=1.13.2",
  "pydantic>=2.8.2",
  "pydantic-settings>=2.4.0",
  "pandas>=2.2.2",
  "matplotlib>=3.9.1",
  "openai>=1.45.0",
  "httpx>=0.27.0",
  "python-dotenv>=1.0.1",
  "orjson>=3.10.7",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.3.2",
  "pytest-cov>=5.0.0",
  "pytest-mock>=3.14.0",
  "ruff>=0.6.1",
  "mypy>=1.11.1",
]

[tool.setuptools]
packages = ["app", "mcp_servers"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "S", "C4"]
ignore = ["S101", "S311", "E501", "S104"]

[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["tests"]

